--- a/OnlineShopping/OnlineShopping.csproj
+++ b/OnlineShopping/OnlineShopping.csproj
@@ -194,7 +194,7 @@
     <Content Include="Views\Customer\RegisterCustomer.cshtml" />
     <Content Include="Views\Customer\CustomerProfile.cshtml" />
     <Content Include="Views\Product\DisplayProduct.cshtml" />
-    <Content Include="Views\Customer\ViewCart.cshtml" />
+    <Content Include="Views\Customer\AddToCart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
