--- a/OnlineShopping/OnlineShopping.csproj
+++ b/OnlineShopping/OnlineShopping.csproj
@@ -195,6 +195,7 @@
     <Content Include="Views\Customer\CustomerProfile.cshtml" />
     <Content Include="Views\Product\DisplayProduct.cshtml" />
     <Content Include="Views\Customer\AddToCart.cshtml" />
+    <Content Include="Views\Customer\LoginCust.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
